# golden-frame

./: .dockerignore  .editorconfig  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  release.yml  server.yml
assets/: golden_frame.json  vladdy_daddy.json
golden_frame/: __init__.py  app.py  cli.py  lib.py  server.py  test_all_frame.py
golden_frame/assets/: big_frame.json  golden_frame.json  obamium_portrait.json  orz.json  plaingoldenframe.json  schizo.json  soldier_meme.json  vladdy_daddy.json  wessuwan.json
golden_frame/assets/json/: obamium_portrait.json  vladdy_daddy.json
server/: Dockerfile  README.md  app.py  pyproject.toml
src/: cli.py  lib.py
