[metadata]
name = golden-frame
description = Golden Frame Generator, Create Golden Frame for given images, it also supports other frame.
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.0.50
license = MIT
author = Leomotors
author_email = 59821765+Leomotors@users.noreply.github.com
url = https://github.com/Leomotors/golden-frame
keywords = meme, meme-generator

[options]
include_package_data = True
install_requires =
    opencv-python
    numpy
    typer
packages = golden_frame

[options.entry_points]
console_scripts =
    golden-frame = golden_frame.cli:main
