[metadata]
name = golden-frame
description = Golden Frame "กรอบทอง" Generator, Create Golden Frame for given images (Also supports other frame)
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.0.51
license = MIT
author = Leomotors
url = https://github.com/Leomotors/golden-frame
keywords = meme, meme-generator

[options]
include_package_data = True
install_requires =
    opencv-python
    numpy
    typer
packages = golden_frame

[options.entry_points]
console_scripts =
    golden-frame = golden_frame.cli:main
